--- a/css/mycss.css
+++ b/css/mycss.css
@@ -62,9 +62,7 @@ body {
 }
 
 #article_content {
-	margin-top: 30px;
-	margin-bottom: 30px;
-	margin-left: 100px;
+	margin: 30px auto;	
 	background: white;
 	width: 1150px;
 	height: 100%;
